argocd/base/patch-argocd-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  template:
    spec:
      containers:
        - command:
            - argocd-server
            - --insecure
          name: argocd-server
